# auto_loguru

./: .codecov.yml  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py  setup.sh
.github/: FUNDING.yml
.github/workflows/: python-package.yml
as_loguru/: __init__.py
asloguru/: __init__.py
auto_loguru/: __init__.py
autosysloguru/: __init__.py  _config.py  _exceptions.py  autosysloguru.md
docs/: conf.py  index.rst
docs/_extensions/: autodoc_stub_file.py
docs/api/: type_hints_source.rst
test/: test_standard_handler.py
tests/: test_autosysloguru.py  test_standard_handler.py
tests/tests_loguru/: conftest.py  test_add_option_colorize.py  test_add_option_filter.py  test_add_option_format.py  test_add_sinks.py  test_ansimarkup_basic.py  test_ansimarkup_extended.py  test_configure.py  test_contextualize.py  test_coroutine_sink.py  test_datetime.py  test_exceptions_catch.py  test_exceptions_formatting.py  test_filesink_compression.py  test_filesink_delay.py  test_filesink_retention.py  test_filesink_rotation.py  test_formatting.py  test_interception.py  test_levels.py  test_multiprocessing.py  test_opt.py  test_parse.py  test_pickling.py  test_propagation.py  test_recattr.py  test_repr.py
tests/tests_loguru/exceptions/source/backtrace/: enqueue.py  enqueue_with_others_handlers.py  missing_attributes_traceback_objects.py  no_tb.py
tests/tests_loguru/exceptions/source/others/: assertionerror_without_traceback.py  catch_message.py  exception_formatting_function.py  level_name.py  level_number.py  message_formatting_with_context_manager.py  message_formatting_with_decorator.py  syntaxerror_without_traceback.py  zerodivisionerror_without_traceback.py
tests/tests_loguru/exceptions/source/ownership/: assertion_from_lib.py  assertion_from_local.py  callback.py  catch_decorator.py  catch_decorator_from_lib.py  decorated_callback.py  direct.py  indirect.py  string_lib.py  string_source.py  syntaxerror.py
